--- a/integration/styles.css
+++ b/integration/styles.css
@@ -5,11 +5,6 @@
     max-block-size: max-content;
 }
 
-form {
-    background-color: rgb(209, 74, 74);
-    display: flex;
-}
-
 .h1 {
    font-size: 3rem; 
    text-align: center;
@@ -215,14 +210,12 @@ form {
 
 
     
-    .forms {
+    form {
         padding: 1rem;
         color: white;
         display: flex;
         flex-direction: column;
-        background: linear-gradient(
-    -45deg
-    , #ffde59, #e7333a);
+        background: linear-gradient(-45deg, #ffde59, #e7333a);
         align-items: center
     }
     
@@ -299,13 +292,14 @@ form {
         padding: 7px 35px;
         border-radius: 60px;
         display: inline-block;
-        color: white;
+        color:#999;
         font-size: 18px;
         cursor: pointer;
         box-shadow: 0 2px 5px 0 rgba(0,0,0,0.06),
                   0 2px 10px 0 rgba(0,0,0,0.07);
         -webkit-transition: all 300ms ease;
         transition: all 300ms ease;
+        
     }
     
     .submit-btn:hover {
