--- a/integration/styles.css
+++ b/integration/styles.css
@@ -22,13 +22,11 @@
         display: flex;
     }
 
-        .div-nav-logo{
+        .row_nav_logo{
             margin: 0 auto;
+            width: 200px
         }
-            .logo {
-                width: 200px
-            }
-
+        
         .nav-content {
             width: 100%;
             display: flex;
@@ -299,7 +297,7 @@
                   0 2px 10px 0 rgba(0,0,0,0.07);
         -webkit-transition: all 300ms ease;
         transition: all 300ms ease;
-        
+        background-color: #93bad9;
     }
     
     .submit-btn:hover {
@@ -358,10 +356,12 @@
             }
         }
 
-    @media (max-width: 900px) {
+    @media (max-width: 400px) {
 
- 
-        .div-nav-logo{
+        .row_nav {
+            display:flex;
+        }
+        .row_nav_logo{
             margin-bottom: -1.8rem;
         }
         .nav-content{
