--- a/integration/style.css
+++ b/integration/style.css
@@ -83,7 +83,33 @@ img {
   max-width: 100%;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 800px) {
+  .site-pusher .site-container {
+    height: 100%;
+  }
+
+  .site-container {
+    overflow: hidden;
+    height: 100%;
+  }
+
+  .site-pusher {
+    height: 100%;
+    transition-duration: 0.3s;
+    transform: translateX(0px);
+  }
+
+  .site-content {
+    position: absolute;
+    top: 66px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    padding-top: 0;
+    overflow-y: scroll;
+    background-color: #fff;
+  }
+
   .header__icon {
     position: relative;
     display: block;
@@ -102,20 +128,44 @@ img {
   }
 
   .menu {
+    transform: translateX(-250px);
+    transition-duration: 0.3s;
     position: absolute;
     left: 0;
-    top: 0;
+    top: 0px;
     bottom: 0;
+    color: white;
     background: linear-gradient(-45deg, #ffde59, #e7333a);
     width: 250px;
+    display: flex;
+    flex-direction: column;
+  }
+  .menu a {
+    display: block;
+    height: 60px;
+    text-align: center;
+    line-height: 40px;
+    border-bottom: 1px solid white;
+  }
+
+  .with--sidebar .site-pusher {
+    transform: translateX(250px);
+  }
+  .with--sidebar .site-cache {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.6);
   }
 }
 html, body {
   display: block;
   background-color: #faf7f7;
   font-family: "Montserrat", sans-serif;
-  max-block-size: max-content;
   height: 100%;
+  margin: 0;
 }
 
 .h1 {
@@ -153,9 +203,6 @@ a {
   padding: 0 10px;
   display: inline-block;
   margin-right: 1em;
-}
-.menu a:hover {
-  color: #e67011;
 }
 
 .bloc_container_article {
@@ -445,7 +492,7 @@ input[type=checkbox]:checked + label {
     display: block;
   }
 }
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 800px) {
   .header {
     position: static;
   }
