--- a/integration/style.scss
+++ b/integration/style.scss
@@ -1,20 +1,38 @@
 @use"reset.scss";
 @use "responsive";
+
+
 $bg: linear-gradient(-45deg, #ffde59, #e7333a);
+$rouge : #c20000;
+$jaune: #f2cb57;
+$white: white;
 
-
+// Généric
 html, body {
-    display: block;
-    background-color: #faf7f7;
     font-family: "Montserrat", sans-serif;
+    color: 229, 229, 229;
+    
+    font-size: 16px;
+    line-height: 1.4;
     height: 100%;
-    margin: 0;
 
+    margin: 1em;
+    padding: 0;
+
+    display:block;
+    text-align: center;
+    
   }
   
-  .h1 {
-    font-size: 3rem;
+
+  a{text-decoration: none; color:inherit;}
+  
+  h1 {
+    padding : 1em;
+    color: #444343;
+    font-size: 1.2em;
     text-align: center;
+    font-weight: bold;
   }
   
   /* HEADER */
@@ -27,183 +45,31 @@ html, body {
     position: fixed;
     left: 0;
     right: 0;
+    top: 0;
     height: 66px;
 
     line-height: 66px;
-    color: black;
+    color:$white;
+    background-color:$rouge;
+    box-shadow: 0 4px 2px -2px gray;
   }
-  
-    .header__logo {
-      float: left;
-      padding: 0 25px;
-      float : left ;
-      width : 10%;
-    }
   
   /* MENU */ 
   .menu {
-    float: left;
     a{
+      font-weight: bold;
       padding: 0 10px; 
       display : inline-block;
       margin-right: 1em;
     }
-    // a:hover{color: rgb(230, 112, 17);}
+
   }
 
-  // ------------------------
-  
-  .bloc_container_article {
-    display: flex;
-    align-items: center;
-  }
-  
-  @keyframes gradient {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  .Qui-sommes-nous {
-    padding: 1rem;
-    color: white;
-    display: flex;
-    background: linear-gradient(-45deg, #ffde59, #e7333a);
-    align-items: center;
-  }
-  
-  .Qui-sommes-nous-paragraphe {
-    margin: auto;
-    width: 50%;
-  }
-  
-  .QSN-titre {
-    width: 100%;
-    animation-duration: 3s;
-    animation-name: glissement;
-  }
-  
-  .arret {
-    animation-play-state: paused;
-  }
-  
-  .encours {
-    animation-play-state: running;
-  }
-  
-  @keyframes glissement {
-    from {
-      margin-left: 100%;
-      width: 200%;
-    }
-    to {
-      margin-left: 0%;
-      width: 100%;
-    }
-  }
-  .Qui-sommes-nous-image {
-    width: 50%;
-  }
-  
-  .Qui-sommes-nous-logo {
-    margin: 1rem;
-    box-shadow: -8px -8px 12px 0 rgba(0, 0, 0, 0.3), 12px 12px 16px rgba(255, 255, 255, 0.25);
-    display: block;
-    margin: auto;
-  }
-  
-  .Notre-métier {
-    display: flex;
-  }
-  
-  .Notre-métier-image {
-    width: 50%;
-    align-items: center;
-  }
-  
-  .Notre-métier-logo {
-    width: 90%;
-    display: block;
-    margin: auto;
-  }
-  
-  .Notre-métier-paragraphe {
-    margin: auto;
-    width: 50%;
-  }
-  
-  .NM-titre {
-    width: 100%;
-    animation-duration: 3s;
-    animation-name: glissement;
-  }
-  
-  .Nos-valeurs {
-    padding: 1rem;
-    color: white;
-    display: block;
-    background: linear-gradient(-45deg, #ffde59, #e7333a);
-  }
-  
-  .Nos-valeurs-paragraphe {
-    display: flex;
-    flex-wrap: wrap;
-    margin: auto;
-    max-width: 50%;
-  }
-  
-  .NV-titre {
-    text-align: center;
-    width: 100%;
-    animation-duration: 3s;
-    animation-name: glissement;
-  }
-  
-  .Partie-Icons {
-    display: flex;
-    justify-content: space-around;
-  }
-  
-  .Icons-paragraphe {
-    text-align: center;
-  }
-  
-  .Icons-images {
-    height: 100px;
-  }
-  
-  .Nos-postes {
-    text-align: center;
-    padding: 1rem;
-  }
-  
-  .Nos-postes-paragraphe {
-    margin-top: 2.3rem;
-  }
-  
-  .postuler-nos-postes {
-    color: white;
-    align-items: center;
-    border-radius: 50px;
-    display: flex;
-    justify-content: center;
-    width: 7.5rem;
-    margin: auto;
-    height: 2rem;
-    background: linear-gradient(-45deg, #ffde59, #e7333a);
-  }
-  
   form {
     padding: 1rem;
     color: white;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(-45deg, #ffde59, #e7333a);
     align-items: center;
   }
   
@@ -223,7 +89,7 @@ html, body {
     border-radius: 4px;
   }
   
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 800px) {
     .styled-input {
       width: 100%;
     }
@@ -280,13 +146,12 @@ html, body {
     padding: 7px 35px;
     border-radius: 60px;
     display: inline-block;
-    color: #999;
+    color:$white;
     font-size: 18px;
     cursor: pointer;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 2px 10px 0 rgba(0, 0, 0, 0.07);
+    background:$rouge;
     -webkit-transition: all 300ms ease;
     transition: all 300ms ease;
-    background-color: #93bad9;
   }
   
   .submit-btn:hover {
@@ -294,7 +159,7 @@ html, body {
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.09);
   }
   
-  @media (max-width: 768px) {
+  @media (max-width: 800px) {
     .submit-btn {
       width: 100%;
       float: none;
@@ -311,37 +176,9 @@ html, body {
     font-style: normal;
   }
   
-  .footer {
-    border: 1px solid black;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
   
-  .footer-items {
-    padding: 0rem;
-    margin: 0.7rem;
-  }
 
-//   RESPONSIVE
-  
-  @media (max-width: 1200px) {
-    .Qui-sommes-nous {
-      text-align: -webkit-center;
-    }
-  
-    .Qui-sommes-nous-paragraphe {
-      width: 100%;
-    }
-  
-    .Qui-sommes-nous-logo {
-      margin: 1rem;
-      box-shadow: -8px -8px 12px 0 rgba(0, 0, 0, 0.3), 12px 12px 16px rgba(255, 255, 255, 0.25);
-      width: 70%;
-      display: block;
-    }
-  }
+  //Responsive
   
   @media only screen and (max-width: 800px) {
     .header{
