--- a/integration/responsive.scss
+++ b/integration/responsive.scss
@@ -1,5 +1,8 @@
 $menu-width:250px!default;
 $bg: linear-gradient(-45deg, #ffde59, #e7333a);
+$jaune:#ffde59;
+$white: white;
+
 @mixin anim {
     transform : (translateX($menu-width * -1));
     transition-duration:0.3s;
@@ -7,8 +10,16 @@ $bg: linear-gradient(-45deg, #ffde59, #e7333a);
 
 @media only screen and (max-width: 800px) {
 
+    .body{
+        display:block;
+        text-align: center;
+        overflow: hidden;
+        margin: 1em;
+    }
+
+
     .site-pusher .site-container{ height: 100%;}
-    .site-container {overflow:hidden; height: 100%;}
+    .site-container {overflow:hidden; height: 100%; }
     .site-pusher{
         height: 100%;
         transition-duration:(0.3s);
@@ -23,14 +34,17 @@ $bg: linear-gradient(-45deg, #ffde59, #e7333a);
         padding-top: 0;
         overflow-y: scroll;
         background-color: #fff;
+        -webkit-overflow-scrolling:touch;
     }
     
+   
     .header__icon {
         position: relative;
         display: block ;
         float: left;
         width: 35px;
         height: 35px;
+        padding: 1em;
 
         cursor: pointer;
 
@@ -40,7 +54,7 @@ $bg: linear-gradient(-45deg, #ffde59, #e7333a);
             display: block;
             width: 1rem;
             height: 0;
-            box-shadow : (0 10px 0 1px rgb(243, 6, 6),0 16px 0 1px rgb(243, 6, 6), 0 22px 0 1px rgb(243, 6, 6) );  
+            box-shadow : (0 10px 0 1px $white,0 16px 0 1px $white, 0 22px 0 1px $white );  
         }
     }
 
@@ -51,9 +65,9 @@ $bg: linear-gradient(-45deg, #ffde59, #e7333a);
         left: 0;
         top: 0px;
         bottom: 0;
-        color: white;
+        color:black;
         
-        background: $bg;
+        background: $jaune ;
         width: $menu-width;
 
         display:flex;
@@ -67,7 +81,7 @@ $bg: linear-gradient(-45deg, #ffde59, #e7333a);
             text-align: center;
             line-height: 40px;
 
-            border-bottom: 1px solid white;
+            border-bottom: 1px solid black;
         }
     }
 
@@ -84,4 +98,10 @@ $bg: linear-gradient(-45deg, #ffde59, #e7333a);
             background-color:rgba(0,0,0,0.6);
         }
     }
+}
+
+@media only screen and (min-width: 800px) {
+    .site-content{
+        padding-top: 58px;
+      }
 }
