--- a/integration/style.css
+++ b/integration/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -87,7 +88,7 @@ img {
     display: block;
     text-align: center;
     overflow: hidden;
-    margin: 1em;
+    margin: 0;
   }
 
   .site-pusher .site-container {
@@ -143,7 +144,7 @@ img {
     top: 0px;
     bottom: 0;
     color: black;
-    background: #ffde59;
+    background: #F2E1AC;
     width: 250px;
     display: flex;
     flex-direction: column;
@@ -179,7 +180,7 @@ html, body {
   font-size: 16px;
   line-height: 1.4;
   height: 100%;
-  margin: 1em;
+  margin: 0;
   padding: 0;
   display: block;
   text-align: center;
@@ -191,11 +192,32 @@ a {
 }
 
 h1 {
-  padding: 1em;
-  color: #444343;
-  font-size: 1.2em;
+  padding: 0.5em;
+  color: #262626;
+  font-size: 1.5em;
   text-align: center;
-  font-weight: bold;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 1.2em;
+  color: #ff7073;
+  font-weight: 500;
+}
+
+.button {
+  padding: 0.5em;
+  width: 8.5em;
+  border-radius: 60px;
+  display: inline-block;
+  text-align: center;
+  color: white;
+  font-size: 1em;
+  cursor: pointer;
+  background: #c20000;
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+  font-weight: 600;
 }
 
 /* HEADER */
@@ -224,12 +246,21 @@ a {
   margin-right: 1em;
 }
 
+.Qui-sommes-nous, .Article-notre-métier, .Nos-valeurs, .Nos-postes {
+  padding: 5px 1em 1em 2em;
+}
+
+.Qui-sommes-nous, .Nos-postes {
+  background: #FAFAFA;
+}
+
 form {
   padding: 1rem;
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: #F2E1AC;
 }
 
 input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid ~ label {
@@ -298,19 +329,28 @@ textarea {
 .input-container {
   width: 650px;
   max-width: 100%;
-  margin: 20px auto 25px auto;
+}
+
+.inupt_submit {
+  width: 5px;
+  text-align: center;
+  display: contents;
 }
 
 .submit-btn {
-  padding: 7px 35px;
+  padding: 14px 25px 12px;
+  width: 11em;
   border-radius: 60px;
   display: inline-block;
+  text-align: center;
   color: white;
-  font-size: 18px;
+  font-size: 1em;
   cursor: pointer;
   background: #c20000;
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 .submit-btn:hover {
