--- a/integration/style.scss
+++ b/integration/style.scss
@@ -2,10 +2,12 @@
 @use "responsive";
 
 
-$bg: linear-gradient(-45deg, #ffde59, #e7333a);
+$bg: #FAFAFA;
 $rouge : #c20000;
-$jaune: #f2cb57;
+$jaune: #F2E1AC;
 $white: white;
+$padding-articles: padding(1em);
+
 
 // Généric
 html, body {
@@ -16,24 +18,53 @@ html, body {
     line-height: 1.4;
     height: 100%;
 
-    margin: 1em;
+    margin: 0;
     padding: 0;
 
     display:block;
     text-align: center;
     
   }
+
+  span{
+    text-transform: uppercase;
+  }
   
 
   a{text-decoration: none; color:inherit;}
   
   h1 {
-    padding : 1em;
-    color: #444343;
-    font-size: 1.2em;
+    padding : 0.5em;
+    color: #262626;
+    font-size: 1.5em;
     text-align: center;
-    font-weight: bold;
+    font-weight: 700;
   }
+  h2{
+    font-size: 1.2em;
+    color: #ff7073;
+    font-weight: 500;
+  }
+
+  .button{
+    padding: 0.5em;
+    width: 8.5em;
+   
+    border-radius: 60px;
+    display: inline-block;
+
+    text-align: center;
+    color:$white;
+    font-size: 1em;
+    cursor: pointer;
+    background:$rouge;
+    -webkit-transition: all 300ms ease;
+    transition: all 300ms ease;
+    font-weight: 600;
+    border-style: none;
+  }
+
+  
   
   /* HEADER */
   a {
@@ -65,12 +96,23 @@ html, body {
 
   }
 
+  // Articles 
+
+  .Qui-sommes-nous, .Article-notre-métier, .Nos-valeurs, .Nos-postes{
+    padding: 5px 1em 1em 2em; 
+  }
+
+  .Qui-sommes-nous, .Nos-postes {
+    background:$bg;
+  }
+
   form {
     padding: 1rem;
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background:$jaune ;
   }
   
   input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid ~ label {
@@ -139,19 +181,30 @@ html, body {
   .input-container {
     width: 650px;
     max-width: 100%;
-    margin: 20px auto 25px auto;
   }
+
+ .inupt_submit{
+   width: 5px;
+   text-align: center;
+   display: contents;
+ }
   
   .submit-btn {
-    padding: 7px 35px;
+    padding: 14px 25px 12px;
+    width: 11em;
+   
     border-radius: 60px;
     display: inline-block;
+
+    text-align: center;
     color:$white;
-    font-size: 18px;
+    font-size: 1em;
     cursor: pointer;
     background:$rouge;
     -webkit-transition: all 300ms ease;
     transition: all 300ms ease;
+    font-weight: 600;
+    text-transform: uppercase
   }
   
   .submit-btn:hover {
