--- a/integration/style.scss
+++ b/integration/style.scss
@@ -11,7 +11,7 @@ $padding-articles: padding(1em);
 
 // Généric
 html, body {
-    font-family: "Montserrat", sans-serif;
+    font-family: Poppins,arial;
     color: 229, 229, 229;
     
     font-size: 16px;
@@ -23,7 +23,6 @@ html, body {
 
     display:block;
     text-align: center;
-    
   }
 
   span{
@@ -54,18 +53,30 @@ html, body {
     display: inline-block;
 
     text-align: center;
-    color:$white;
-    font-size: 1em;
+    font-size: 0.7em;
     cursor: pointer;
-    background:$rouge;
-    -webkit-transition: all 300ms ease;
-    transition: all 300ms ease;
-    font-weight: 600;
+  
     border-style: none;
+    background:$bg;
+    border: 2px solid $rouge;
+    color: $rouge;
+    font-weight: 700;
+    &:hover {
+      color: white;
+      background: $rouge;
+    }
+  }
+  .dd{
+    background: $jaune;
+    font-size: 0.8em;
   }
 
   
-  
+  .footer_para{
+    background:$bg;
+    margin-top: 0;
+    padding: 1em;
+  }
   /* HEADER */
   a {
     text-decoration: none;
@@ -99,10 +110,10 @@ html, body {
   // Articles 
 
   .Qui-sommes-nous, .Article-notre-métier, .Nos-valeurs, .Nos-postes{
-    padding: 5px 1em 1em 2em; 
+    padding: 5px 2em 1em 2em; 
   }
 
-  .Qui-sommes-nous, .Nos-postes {
+  .Qui-sommes-nous, .Nos-postes, .footer {
     background:$bg;
   }
 
@@ -189,23 +200,7 @@ html, body {
    display: contents;
  }
   
-  .submit-btn {
-    padding: 14px 25px 12px;
-    width: 11em;
-   
-    border-radius: 60px;
-    display: inline-block;
-
-    text-align: center;
-    color:$white;
-    font-size: 1em;
-    cursor: pointer;
-    background:$rouge;
-    -webkit-transition: all 300ms ease;
-    transition: all 300ms ease;
-    font-weight: 600;
-    text-transform: uppercase
-  }
+  
   
   .submit-btn:hover {
     transform: translateY(1px);
