flexbox ok, nav ok, reponsive ok

--- a/responsive.scss
+++ b/responsive.scss
@@ -1,17 +1,21 @@
 $menu-width:250px!default;
-$bg: #F2F2F2;
+$bg:linear-gradient(-45deg, #ffde59, #e7333a); 
 $rouge : #c20000;
 $jaune: #F2E1AC;
 $white: white;
 $black: black;
+$breakpoint-tablet:800px;
+$breakpoint-iphone:760px;
 
 @mixin anim {
     transform : (translateX($menu-width * -1));
     transition-duration:0.3s;
 } 
 
-@media only screen and (max-width: 800px) {
-
+@media only screen and (max-width: $breakpoint-tablet) {
+    .header .header__img{
+        float:inherit;
+    }
     .body{
         display:block;
         text-align: center;
@@ -19,7 +23,12 @@ $black: black;
         margin: 0;
     }
 
-
+    .Qui-sommes-nous-paragraphe{
+        padding: 1em;
+    }
+    .Qui-sommes-nous-image{
+        position: static;
+    }
     .site-pusher .site-container{ height: 100%;}
     .site-container {overflow:hidden; height: 100%; }
     .site-pusher{
@@ -38,8 +47,7 @@ $black: black;
         background-color: #fff;
         -webkit-overflow-scrolling:touch;
     }
-    
-   
+     
     .header__icon {
         position: relative;
         display: block ;
@@ -56,10 +64,11 @@ $black: black;
             display: block;
             width: 1rem;
             height: 0;
-            box-shadow : (0 10px 0 1px $white,0 16px 0 1px $white, 0 22px 0 1px $white );  
+            box-shadow : (0 10px 0 1px $black,0 16px 0 1px $black, 0 22px 0 1px $black );  
         }
     }
-
+    
+   
     .menu{
         @include anim();
 
@@ -69,7 +78,7 @@ $black: black;
         bottom: 0;
         color:$black;
         
-        background: $jaune ;
+        // background: $jaune ;
         width: $menu-width;
 
         display:flex;
@@ -102,8 +111,28 @@ $black: black;
     }
 }
 
+@media only screen and (max-width: $breakpoint-iphone){
+    .Qui-sommes-nous, .Notre-métier{
+        flex-direction: column;
+    }
+    .Qui-sommes-nous, .Notre-métier, .Nos-valeurs, .Nos-postes{
+        padding-bottom: 20px;
+    }
+    .Qui-sommes-nous-paragraphe, .Notre-métier-paragraphe{
+        width: 70%;
+      }
+
+}
+
 @media only screen and (min-width: 800px) {
     .site-content{
         padding-top: 58px;
       }
 }
+
+// nav bar responsive exemple
+// . main {
+//     display: flex; 
+//     flex-flow: row wrap;
+//     justify-content: space-between;
+// }
