--- a/style.css
+++ b/style.css
@@ -112,15 +112,34 @@ h1 {
   margin-top: 0;
 }
 
+.div-np-titre {
+  text-align: center;
+}
+
+.NP-titre {
+  border: 3px solid black;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 70px;
+  margin-top: 1em;
+  padding-bottom: 15px;
+  display: inline-flex;
+}
+
 h2 {
   font-size: 1.2em;
   font-weight: 800;
 }
 
 .button {
+  background: linear-gradient(-45deg, #ffde59, #e7333a);
+  color: white;
   padding: 0.5em;
   width: 8.5em;
-  border-radius: 60px;
+  border-radius: 50px;
   display: inline-block;
   text-align: center;
   font-size: 0.7em;
@@ -146,14 +165,14 @@ p {
   left: 0;
   right: 0;
   top: 0;
-  height: 66px;
+  height: 80px;
   line-height: 66px;
   background: white;
   box-shadow: 0 4px 2px -2px gray;
 }
 .header .header__img {
-  float: right;
-  max-width: 60px;
+  float: left;
+  max-height: 90px;
 }
 
 /* MENU */
@@ -162,6 +181,26 @@ p {
   padding: 0 10px;
   display: inline-block;
   margin-right: 1em;
+  margin-top: 10px;
+}
+
+.a-postuler {
+  display: flex;
+  align-items: center;
+  width: 140px;
+  height: 40px;
+  margin: 0;
+  font-weight: 700;
+  cursor: pointer;
+  border-radius: 50px;
+  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25), -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+  background: linear-gradient(-45deg, #ffde59, #e7333a);
+  color: white;
+}
+.a-postuler p {
+  padding: 0;
+  margin: 0;
+  line-height: 37px;
 }
 
 .footer_para {
@@ -173,9 +212,34 @@ p {
   background: linear-gradient(-45deg, #ffde59, #e7333a);
 }
 
+.Qui-sommes-nous {
+  height: 90vh;
+}
+
 .Qui-sommes-nous, .Notre-métier {
   display: flex;
   align-items: center;
+}
+.Qui-sommes-nous .Qui-sommes-nous-image-size, .Notre-métier .Qui-sommes-nous-image-size {
+  width: 400px;
+  box-shadow: -8px -8px 12px 0 rgba(0, 0, 0, 0.3), 12px 12px 16px rgba(255, 255, 255, 0.25);
+}
+
+.Nos-valeurs {
+  height: 40vh;
+  padding-top: 30px;
+}
+
+.Nos-valeurs-paragraphe {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 6px;
+  padding-left: 6px;
+}
+.Nos-valeurs-paragraphe div {
+  width: 34%;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
 }
 
 .Nos-valeurs, .Nos-postes {
